--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 :root {
   --bg-color: #f4f7f5;
   --text-color: #333333;
-  --primary-color: #008080;
+  --primary-color: #C678DD;
   --secondary-color: #a2d5d5;
   --white: #ffffff;
   --heading-font: 'Lato', sans-serif;
