--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 :root {
   --bg-color: #F8F8F8;
   --text-color: #333333;
-  --primary-color: #2196F3;
+  --primary-color: #C678DD;
   --secondary-color: #e0e0e0;
   --white: #ffffff;
   --heading-font: 'Lato', sans-serif;
